# SEM-Image-Viewer

./: .gitignore  README.md
SEM-Image-Viewer/: .gitignore  CMakeCache.txt.prev  CMakeLists.txt  SEM-Image-Viewer.pro  cmake_install.cmake  image_cache_config.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
SEM-Image-Viewer/.cmake/api/v1/reply/: cmakeFiles-v1-10395b1b46ffb6dfeb9a.json  cmakeFiles-v1-9ce519f0e1ce61d81ceb.json  codemodel-v2-15282d99a1f5fb41a3c5.json  codemodel-v2-bc65b3494d0df08dbe38.json  codemodel-v2-c4a033ff602f1f46f579.json  directory-.-18131cc126f1342892ee.json  directory-.-e523074c385a43044688.json  index-2024-11-02T16-07-37-0576.json  target-SEM-Image-Viewer-312aa5d5437da55e1ac9.json  target-SEM-Image-Viewer-590eb58925deeb5a111d.json
SEM-Image-Viewer/.cmake/api/v1/reply.prev/: cache-v2-0f61886556150153e7eb.json  codemodel-v2-c3a55023f883d4972509.json  directory-.-ae9d04c935fc429015fd.json  directory-.-f97ff27753d76debd0d0.json  index-2024-11-01T15-07-37-0094.json  index-2024-11-02T16-06-58-0799.json  target-SEM-Image-Viewer-8f22e91d8bdee4f9cd1c.json  target-SEM-Image-Viewer-d36e2b008c1d211b1f11.json  target-SEM-Image-Viewer_autogen-ab9bda7693071f4a2373.json  target-SEM-Image-Viewer_autogen_timestamp_deps-78efdd0379621118ddf4.json
SEM-Image-Viewer/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
SEM-Image-Viewer/SEM-Image-Viewer_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
SEM-Image-Viewer/SEM-Image-Viewer_autogen/EWIEGA46WW/: moc_mainwindow.cpp.d
SEM-Image-Viewer/SEM-Image-Viewer_autogen/IMAN36LHMA/: moc_image_info_bar.cpp.d  moc_image_widget.cpp.d  moc_sharpen_filter_widget.cpp.d  moc_zoom_widget.cpp.d
SEM-Image-Viewer/core/: image.cpp  image.h  image_editor.cpp  image_editor.h  image_utils.cpp  image_utils.h  imageeditor.cpp  imageeditor.h  utils.cpp  utils.h
SEM-Image-Viewer/core/commands/: FilterCommand.cpp  FilterCommand.h  ICommand.h
SEM-Image-Viewer/core/data/: ErrorMessage.cpp  ErrorMessage.h  IMessage.cpp  IMessage.h  Image.cpp  Image.h  ImageColorSpace.cpp  ImageColorSpace.h  ImageFormat.cpp  ImageFormat.h  ImageMetadata.cpp  ImageMetadata.h  ImageRepository.cpp  ImageRepository.h  ImageState.cpp  ImageState.h  InfoMessage.cpp  InfoMessage.h  SessionData.cpp  SessionData.h  Visitable.h  Visitor.h  WarningMessage.cpp  WarningMessage.h  image.cpp  image.h  image_cache_pool.cpp  image_cache_pool.h  image_cache_task.cpp  image_cache_task.h  image_cacheless.cpp  image_cacheless.h  image_color_space.cpp  image_color_space.h  image_format.cpp  image_format.h  image_meta_data.cpp  image_meta_data.h  image_repository.cpp  image_repository.h  (+10 more)
SEM-Image-Viewer/core/engines/: ImageRepository.cpp  ImageRepository.h  ImageSession.cpp  ImageSession.h  JsonVisitor.cpp  JsonVisitor.h  Logger.cpp  Logger.h  ThreadPool.cpp  ThreadPool.h  UndoManager.cpp  UndoManager.h  Workspace.cpp  Workspace.h  json_vsitor.cpp  json_vsitor.h  logger.cpp  logger.h  thread_pool.cpp  thread_pool.h  workspace.cpp  workspace.h
SEM-Image-Viewer/core/filters/: BatchFilter.cpp  BatchFilter.h  EdgeDetectionFilter.cpp  EdgeDetectionFilter.h  GrayScaleFilter.cpp  GrayScaleFilter.h  ImageFilter.cpp  ImageFilter.h  NoiseReductionFilter.cpp  NoiseReductionFilter.h  SharpenFilter.cpp  SharpenFilter.h  batch_filter.cpp  batch_filter.h  edge_detection_filter.cpp  edge_detection_filter.h  gray_scale_filter.cpp  gray_scale_filter.h  image_filter.cpp  image_filter.h  noise_reduction_filter.cpp  noise_reduction_filter.h  sharpen_filter.cpp  sharpen_filter.h
SEM-Image-Viewer/filters/: image_filter.h
SEM-Image-Viewer/models/: ImageDataModel.cpp  ImageDataModel.h  MessageDataModel.cpp  MessageDataModel.h  image_data_model.cpp  image_data_model.h
SEM-Image-Viewer/modules/: image_processor.cpp  image_processor.h
SEM-Image-Viewer/styles/: dark-mode.qss  light-mode.qss
SEM-Image-Viewer/widgets/: DiffViewWidget.cpp  DiffViewWidget.h  ExitDialogWidget.cpp  ExitDialogWidget.h  FileBrowserWidget.cpp  FileBrowserWidget.h  FileIconHider.cpp  FileIconHider.h  GridView.cpp  GridView.h  ImageDialog.cpp  ImageDialog.h  ImageFilterProxyModel.cpp  ImageFilterProxyModel.h  ImageWidgetCore.cpp  ImageWidgetCore.h  LoadSessionDialog.cpp  LoadSessionDialog.h  LoggerWidget.cpp  LoggerWidget.h  MiniGrid.cpp  MiniGrid.h  SaveSessionDialog.cpp  SaveSessionDialog.h  ThumbnailDelegate.h  WidgetViewController.cpp  WidgetViewController.h  actionListWidget.cpp  action_list_widget.cpp  action_list_widget.h  actionlistwidget.h  bottom_middle_widget.cpp  bottom_middle_widget.h  bottommiddlewidget.cpp  bottommiddlewidget.h  controllerWidget.cpp  controllerWidget.h  controller_widget.cpp  controller_widget.h  diff_view_widget.cpp  (+89 more)
build-SEM-Image-Viewer-Qt_6_6_2_for_macOS-Debug/: Makefile  moc_mainwindow.cpp  ui_mainwindow.h
build-SEM-Image-Viewer-Qt_6_6_2_for_macOS-Debug/.qtc_clangd/: compile_commands.json
build-SEM-Image-Viewer-Qt_6_6_2_for_macOS-Debug/SEM-Image-Viewer.app/Contents/: Info.plist
build-SEM-Image-Viewer-Qt_6_7_2_6_7_2_1-Debug/: CMakeCache.txt.prev  cmake_install.cmake
build-SEM-Image-Viewer-Qt_6_7_2_6_7_2_1-Debug/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-SEM-Image-Viewer-Qt_6_7_2_6_7_2_1-Debug/SEM-Image-Viewer_autogen/: deps  mocs_compilation.cpp
logger/: .gitignore  Buffer.h  CMakeLists.txt  Filter.h  Formatter.h  Level.h  Log.h  Logger.h  Metadata.h  NopLogger.h  Record.h  Target.h  Writer.h  main.cpp
logger/src/: Level.cpp  Level.h  Logger.cpp  Logger.h  LoggerUtils.cpp  LoggerUtils.h  Metadata.cpp  Metadata.h  NopLogger.cpp  NopLogger.h  Record.cpp  Record.h  config.h
logger/src/filter/: Directive.h  Filter.cpp  Filter.h  FilterOp.cpp  FilterOp.h
logger/src/formatter/: DefaultFormatter.cpp  DefaultFormatter.h  Formatter.cpp  Formatter.h
logger/src/writer/: Buffer.cpp  Buffer.h  BufferWriter.cpp  BufferWriter.h  FileTarget.cpp  FileTarget.h  StderrTarget.cpp  StderrTarget.h  StdoutTarget.cpp  StdoutTarget.h  WritableTarget.h  Writer.cpp  Writer.h
(+1699 files in other folders)
